# dft-almgsi-stability

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  convergence_cases.txt  production_cases_defects.txt  production_cases_first.txt  production_cases_remaining.txt  pyproject.toml  requirements.txt
config/: local_smoke.yaml  production.example.yaml  pseudopotentials.example.yaml
hpc/young/: README.md  run_al30mgsi_1nn.template.sh  run_al30mgsi_2nn.template.sh
pseudos/: README.md
results/: RESULTS.md  convergence_results.csv  cutoff_convergence.csv  elemental_references.csv  excluded_calculations.csv  kpoint_convergence.csv  pair_binding_energies.csv  results.csv  smoke_results.csv  substitution_formation_energies.csv
runs/convergence/: config.yaml
runs/convergence/conv_cutoff_al_ecut30/: metadata.json  pw.in  pw.out  run_status.json
runs/convergence/conv_cutoff_al_ecut40/: metadata.json  pw.in  pw.out  run_status.json  structure_final.cif
runs/convergence/conv_cutoff_al_ecut50/: metadata.json  pw.in  pw.out  run_status.json
runs/production/: config.yaml
runs/smoke/: WARNINGS.txt
scripts/: archive_results.sh  check_environment.sh
src/almgsi_dft/: __init__.py  analysis.py  cli.py  config.py  convergence.py  energetics.py  exceptions.py  neighbour_shells.py  parser.py  plotting.py  qe_inputs.py  reporting.py  runner.py  structures.py
tests/: test_config.py  test_energetics.py  test_integration_optional.py  test_neighbour_shells.py  test_parser.py  test_qe_input_generation.py  test_runner_progress.py  test_structures.py
(+81 files in other folders)
