[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almgsi-dft"
version = "0.1.0"
description = "Local Quantum ESPRESSO/ASE workflow for Al-Mg-Si first-principles stability studies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AUTHOR_NAME_PLACEHOLDER"}]
dependencies = ["ase", "numpy", "scipy", "pandas", "matplotlib", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
almgsi-dft = "almgsi_dft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires Quantum ESPRESSO and valid pseudopotentials"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]
